welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:41: error: Unmatched closing brace '}' ignored here
  }
  ^SnakeBuggle:44: error: Unmatched closing brace '}' ignored here
}
^